Kontor Page Intros

--- a/docs/kontor/faq.mdx
+++ b/docs/kontor/faq.mdx
@@ -2,6 +2,10 @@
 title: FAQ
 ---
 
+<div className="page-intro">
+Questions about Kontor's architecture, smart contracts, file storage, and its relationship to Bitcoin and other protocols.
+</div>
+
 ## BTC and KOR
 
 **Do I need KOR to use Kontor?**
