--- a/docs/kontor/what-is-kontor.mdx
+++ b/docs/kontor/what-is-kontor.mdx
@@ -3,6 +3,10 @@ title: What is Kontor?
 mode: wide
 ---
 
+<div className="page-intro">
+Kontor is a next-generation metaprotocol with rich smart contracts and perpetual file storage built entirely on Bitcoin.
+</div>
+
 Kontor is a Bitcoin metaprotocol that brings programmable assets and verifiable long-term file storage directly to Bitcoin. Unlike sidechains or rollups that create separate networks, Kontor operates entirely on Bitcoin itself—every Kontor transaction is a Bitcoin transaction, secured by Bitcoin's full hashpower and finality guarantees. This means you can build and deploy sophisticated applications on Bitcoin without leaving the Bitcoin network or trusting additional consensus mechanisms.
 
 At its core, Kontor addresses what blockchains are actually used for: creating, managing, and transferring digital assets. It provides two key capabilities that Bitcoin alone cannot offer. First, **Sigil**, a next-generation WebAssembly-based smart contract framework that lets developers write expressive, type-safe contracts in familiar languages like Rust. Second, a **file persistence protocol** that stores data off-chain with cryptographic proofs and economic incentives anchored on Bitcoin, solving the problem of expensive on-chain storage without sacrificing persistence or availability.
