--- a/docs/kontor/how-it-works.mdx
+++ b/docs/kontor/how-it-works.mdx
@@ -3,6 +3,10 @@ title: How Does Kontor Work?
 mode: wide
 ---
 
+<div className="page-intro">
+Every Kontor transaction is a Bitcoin transaction with extra metadata that the Kontor indexer parses deterministically.
+</div>
+
 **Kontor is a next-generation metaprotocol on Bitcoin.** A metaprotocol is a set of rules for interpreting Bitcoin transactions in a way that Bitcoin itself doesn't recognize—adding functionality on top of Bitcoin without changing Bitcoin's consensus rules. Other metaprotocols, like Colored Coins, Counterparty, Ordinals, Runes, BRC-20 and Alkanes all work the same way: they use Bitcoin for transaction ordering and finality, but add meaning to transactions that Bitcoin miners don't need to understand. Kontor distinguishes itself by providing rich smart contracts with expressive languages, native composability between contracts, and deep integration with Bitcoin's transaction model. The aim is to support the kind of complex financial applications—intricate asset logic, composable DeFi protocols, and programmable primitives—that have historically required purpose-built blockchains, while preserving the security and value alignment that make Bitcoin metaprotocols distinctive.
 
 
