--- a/docs/kontor/resources/whitepaper.mdx
+++ b/docs/kontor/resources/whitepaper.mdx
@@ -3,6 +3,10 @@ title: Whitepaper
 mode: wide
 ---
 
+<div className="page-intro">
+Comprehensive technical specification covering protocol design, architecture, and implementation details.
+</div>
+
 The comprehensive Kontor whitepaper provides in-depth technical details about the protocol design, architecture, and implementation.
 
 <a href="https://raw.githubusercontent.com/KontorProtocol/Documentation/main/img/2025-08-30_kontor-whitepaper.pdf" target="_blank" className="block">
