--- a/docs/kontor/security.mdx
+++ b/docs/kontor/security.mdx
@@ -3,6 +3,10 @@ title: Security
 mode: wide
 ---
 
+<div className="page-intro">
+Kontor is 100% secured by Bitcoin miners---there are no "validators", "bridges", "sequences" or other trusted entities.
+</div>
+
 Kontor's security model has two primary components: Bitcoin's consensus mechanism and the correctness of the indexer implementation. Bitcoin provides transaction ordering, finality, and immutability—no one can rewrite history, censor transactions, or change the order of operations once blocks are confirmed. The indexer, on the other hand, simply provides deterministic execution—given the same transaction history, it computes the same protocol state. This means you trust that Bitcoin's proof-of-work secures the ledger, and you trust that the indexer software correctly implements Kontor's rules. You don't trust “validators”, “bridge operators”, “sequencers”, etc.—those don't exist in Kontor's architecture.
 
 **Verifiability.** If two indexers disagree about state, one of them is wrong, and the disagreement can be detected by anyone. You can run your own indexer to independently verify protocol state, or you can query someone else's indexer and spot-check critical operations by syncing portions of the blockchain yourself. This is different from sidechains where you must trust validators to honestly report state, or rollups where there is no guarantee of data availability. With Kontor, the complete protocol logic is in open-source software executing deterministically over public data.
