--- a/docs/kontor/tokenomics.mdx
+++ b/docs/kontor/tokenomics.mdx
@@ -3,6 +3,10 @@ title: KOR and Tokenomics
 mode: wide
 ---
 
+<div className="page-intro">
+KOR meters contract execution and incentivizes perpetual storage with emissions while keeping BTC the unit of account.
+</div>
+
 **BTC is the gold; KOR is the gas.** Kontor respects BTC's primacy as digital money and the network's unit of account. BTC is what users hold, what assets are priced in, and what atomic swaps settle in. KOR's economic model, by contrast, was designed specifically for data storage and smart contract execution. Bitcoin's deflationary tokenomics—fixed supply, periodic halvings—make it excellent as a store of value but unsuited for incentivizing perpetual storage or metering computation. KOR fills this gap as a complementary utility token. Users acquire KOR through on-chain atomic swaps with BTC when they need to execute contracts or store files, making the interaction seamless.
 
 **Emissions sustain storage, burns control inflation.** KOR emissions reward storage nodes for maintaining files, creating a continuous income stream that incentivizes perpetual availability. These emissions scale based on network health: when file replication is strong, emissions stay moderate; when replication weakens and approaches minimum thresholds, emissions increase to attract more storage capacity. This counter-cyclical mechanism stabilizes the network—under-replication triggers higher rewards, which incentivizes repair. Meanwhile, protocol fees are burned: users burn KOR when creating storage agreements, when executing smart contracts, and when exiting storage commitments. As network activity increases, burns increase proportionally, creating deflationary pressure that offsets emissions.
