--- a/docs/sigil/examples/shared-account-dynamic.mdx
+++ b/docs/sigil/examples/shared-account-dynamic.mdx
@@ -15,7 +15,7 @@ This example uses the `interface!` macro and `ContractAddress` type to implement
 Import type `contract-address`
 
 and exports:
-- `open`: Creates an account for a specificied token and tenants
+- `open`: Creates an account for the specified token and tenants
 - `deposit`/`withdraw`: Modifies the account balance using the specified token contract
 - `balance`/`tenants`: Queries the account balance or tenant list
 
