--- a/docs/sigil/introduction.mdx
+++ b/docs/sigil/introduction.mdx
@@ -6,7 +6,7 @@ mode: wide
 
 **Sigil** is a **next-generation WebAssembly-based smart contract framework** that enables developers to develop, deploy, and run rich smart contract applications on Bitcoin with the Kontor metaprotocol. Sigil is designed to offer strong compile-time type safety, powerful language built-ins, an expressive storage interface, rich native types, native cross-contract calls and excellent overall ergonomics.
 
-**Attention:** Sigil is currently in *early-preview* and available to select developers for feedback and review. Developers can write smart contracts with Sigil, but not yet execute them with the Kontor Indexer or deploy them to a Bitcoin network.
+**Attention:** Sigil is currently in *early preview* and available to select developers for feedback and review. Developers can write smart contracts with Sigil, but not yet execute them with the Kontor Indexer or deploy them to a Bitcoin network.
 
 Planned features include:
 
@@ -14,7 +14,7 @@ Planned features include:
 - Native `Address` type
 - Gas tracking
 - Events system
-- Typescript SDK for interacting with contracts clientside
+- Typescript SDK for interacting with contracts client-side
 - Integration with the Kontor Indexer 
 - Enhanced querying capabilities, including key prefix matching for `Map` types
 
