Increase Precision in BRC-2.0 Comparison

--- a/docs/sigil/reference/brc2-0.mdx
+++ b/docs/sigil/reference/brc2-0.mdx
@@ -32,9 +32,10 @@ Beyond the compatibility issues, the EVM and Solidity have well-documented limit
 
 BRC2.0 employs a two-layer architecture that separates the base BRC-20 protocol from the programmable module. Tokens must be explicitly deposited into the module via a `transfer` inscription to `OP_RETURN "BRC20PROG"`, where they become accessible to EVM contracts. To retrieve tokens, users must inscribe a `withdraw` operation and send it to their destination address. Within the module, contracts manipulate token balances through a pre-deployed `BRC20Controller` contract that implements ERC-20 compatibility. Kontor similarly requires explicit operations to bring assets into/out of contract scope. ATTACH operations commit assets to contract execution, and DETACH operations specify how resulting outputs should be distributed. The critical difference lies not in the basic deposit/withdraw pattern, but in how operations can be composed. BRC2.0's inscription-based model means each operation is isolated: inscribe data, send to `OP_RETURN`, wait for execution, then begin the next operation from scratch. Kontor's PSBT-based model enables atomic chaining of operations. Even though individual operations like ATTACH use commit-reveal patterns (two transactions), multiple operations can be constructed as a single PSBT where all parties sign their components upfront, and the entire chain broadcasts atomically.
 
-This isolation affects DeFi patterns significantly:
+This isolation affects cross-protocol execution patterns significantly:
 
 - **Atomic arbitrage**: A sequence like swap-on-DEX-A → swap-on-DEX-B → profit requires multiple independent inscriptions, each of which could fail or be front-run.
-- **Multi-protocol compositions**: Cannot guarantee that a complex sequence (provide liquidity → stake LP tokens → claim rewards) executes as an atomic unit.
+- **Cross-protocol compositions**: Cannot guarantee that a complex sequence (provide liquidity → stake LP tokens → claim rewards) executes as an atomic unit across protocols.
+- **Cross-protocol flash loans**: While flash loans that borrow and repay within a single contract call work fine, cross-protocol flash loans that depend on atomic execution across multiple contracts are not possible.
 
-Developers can build batching logic into individual contracts, but each EVM contract must be rewritten to explicitly implement batching support and, even then, the atomicity is limited to operations within a single contract call. By contrast, Kontor's PSBT-based model enables atomic operation chaining. While individual operations like ATTACH use commit-reveal patterns spanning multiple Bitcoin transactions, a key architectural feature of Kontor is that multiple operations can be constructed as a unified PSBT. All participants sign their components up-front, and the entire chain—ATTACH → contract execution → DETACH, or ATTACH → atomic swap → DETACH—broadcasts as an atomic sequence, enabling patterns that require multi-step atomicity and deterministic ordering. With Kontor the sequence is explicit in the transaction chain construction rather than dependent on miners; this reduces MEV opportunities and makes the outcome of multi-step operations much more predictable.
+Only Kontor enables atomic operation chaining across contracts and protocols. While individual operations like ATTACH use commit-reveal patterns spanning multiple Bitcoin transactions, a key architectural feature of Kontor is that multiple operations can be constructed as a unified PSBT. All participants sign their components up-front, and the entire chain—ATTACH → contract execution → DETACH, or ATTACH → atomic swap → DETACH—broadcasts as an atomic sequence. The atomicity guarantee extends to PSBT construction: once all parties have signed, the entire multi-step sequence executes deterministically. With Kontor the sequence is explicit in the transaction chain construction rather than dependent on miners; this reduces MEV opportunities and makes the outcome of multi-step operations much more predictable.
