--- a/docs/sigil/reference/brc2-0.mdx
+++ b/docs/sigil/reference/brc2-0.mdx
@@ -16,6 +16,6 @@ BRC2.0's choice of using the EVM execution environment aims to leverage Ethereum
 - Account abstraction schemes (ERC-4337)
 - Standard `permit()` functions on tokens
 
-BRC2.0 provides a BIP-322 signature verification precompile at address `0xfe`, but this requires rewriting any contract that performs signature verification. Existing Ethereum contracts, including widely-used protocols like Uniswap, Aave, and Safe, therefore need substantial modification to work in BRC2.0. The pattern of using `ecrecover` to verify signatures must be replaced with calls to the custom precompile. This means the benefit of leveraging existing Ethereum codebases is largely unrealized. Wallet integration also requires different infrastructure. Users cannot use MetaMask or standard Web3 wallets; they need Bitcoin wallets supporting BIP-322 signing, but this standard has very limited support.
+BRC2.0 provides a BIP-322 signature verification precompile at address `0xfe`, but this requires rewriting any contract that performs signature verification. Existing Ethereum contracts, including widely-used protocols like Uniswap, Aave, and Safe, therefore need substantial modification to work in BRC2.0. The pattern of using `ecrecover` to verify signatures must be replaced with calls to the custom precompile. This means the benefit of leveraging existing Ethereum codebases is difficult to realize. Wallet integration also requires different infrastructure. Users cannot use MetaMask or standard Web3 wallets; they need Bitcoin wallets supporting BIP-322 signing, but this standard has very limited support.
 
-Beyond the compatibility issues, the EVM and Solidity have well-documented limitations that have driven the broader smart contract ecosystem toward WebAssembly over recent years. The EVM's design has been implicated in numerous high-profile exploits—reentrancy attacks, integer overflows, and complex gas optimization challenges. Solidity's implicit behaviors and limited type system make it difficult to write provably correct contracts. Kontor's Sigil framework has better security properties, more predictable execution costs, and access to mature programming language ecosystems.
+Beyond the compatibility issues, the EVM's 256-bit stack-based architecture and Solidity's design choices create different trade-offs than WebAssembly-based systems. The EVM was designed for Ethereum's specific constraints in 2015, while WebAssembly emerged only later as a portable compilation target for broader industry adoption.
