Fix file agreement creation flow description
Correct the file-storage.mdx to match actual protocol flow:
- Agreement is created in inactive state first
- Then nodes join by broadcasting transactions
- Agreement activates when minimum nodes reached

Previous description incorrectly suggested nodes sign before agreement creation.

--- a/docs/kontor/file-storage.mdx
+++ b/docs/kontor/file-storage.mdx
@@ -15,7 +15,7 @@ Kontor's approach differs from that of other blockchain storage solutions in bot
 
 # Protocol
 
-**File agreement creation.** A user prepares a file by applying Reed-Solomon erasure coding, which adds redundancy so the file can be recovered even if some data is lost. The encoded file is organized into a Merkle tree, and the tree's root serves as a cryptographic commitment to the entire file. The user creates a `FileAgreement` transaction containing this Merkle root, the file size, and signatures from at least a minimum number of storage nodes. Once confirmed on Bitcoin, the agreement becomes active—storage nodes hold the file data off-chain and begin earning rewards. The blockchain stores the metadata and the cryptographic commitments, but not the file contents themselves. In practice, users may use a “storage portal” service to automate the file preparation and signature-gathering steps. 
+**File agreement creation.** A user prepares a file by applying Reed-Solomon erasure coding, which adds redundancy so the file can be recovered even if some data is lost. The encoded file is organized into a Merkle tree, and the tree's root serves as a cryptographic commitment to the entire file. The user distributes this prepared file to potential storage nodes off-chain, then creates a `FileAgreement` transaction containing the Merkle root, file size, and other metadata. Once confirmed on Bitcoin, the agreement enters an inactive state. Storage nodes holding the file data broadcast transactions to join the agreement. When the minimum required number of nodes have joined, the agreement activates—nodes begin earning emissions and become subject to challenges. The blockchain stores only the metadata and cryptographic commitments, not the file contents themselves. In practice, users may use a "storage portal" service to automate the file preparation and distribution steps. 
 
 
 **Emissions and staking.** Each block, files generate KOR emissions. Files created earlier in the network's history receive slightly higher weights, ensuring valuable historical data remains attractive to store as the network grows. Emissions are distributed equally among the nodes storing each file. Storage nodes must stake KOR proportional to their commitments, with requirements designed to prevent Sybil attacks and ensure capital efficiency. Nodes wishing to exit agreements must pay fees that increase as a file's replication approaches its minimum threshold.
