Eliminate Kontor Protocol tab, create Resources tab
Major restructure:
- Remove Kontor Protocol tab entirely
- Move architecture.mdx and security.mdx to introduction/
- Create new docs/resources/ directory
- Move all resource files to resources/:
  - faq.mdx
  - whitepaper.mdx
  - economic-model.mdx
  - storage-protocol.mdx
- Remove empty kontor/ directory

New tab structure:
1. Introduction (home, what/why/how, core concepts, architecture, security)
2. Smart Contracts (Sigil)
3. File Storage (Storage protocol)
4. Economics
5. Resources (FAQ + technical specs)

This eliminates content duplication and provides clearer navigation.

--- a/docs/introduction/core-concepts.mdx
+++ b/docs/introduction/core-concepts.mdx
@@ -61,9 +61,7 @@ This hybrid model gives Kontor unique interoperability—assets are first-class 
 
 <!-- TODO: Add detailed hybrid UTXO mechanics when implementation documentation is ready -->
 
-## Atomic Swaps
-
-Kontor enables single-confirmation atomic swaps between BTC, KOR, and assets from other Bitcoin metaprotocols (Ordinals, Runes, Counterparty). Users can chain a BTC-to-KOR swap directly with a contract call in a single Bitcoin transaction, making interaction seamless.
+Kontor's hybrid model enables single-confirmation atomic swaps between BTC, KOR, and assets from other Bitcoin metaprotocols (Ordinals, Runes, Counterparty). Users can chain a BTC-to-KOR swap directly with a contract call in a single Bitcoin transaction, making interaction seamless.
 
 **Example flow:**
 1. User holds BTC, wants to call a Kontor contract (which requires KOR for gas)
