Fix MDX comment syntax and simplify home page
- Fix parsing error: Convert HTML comments to MDX syntax {/* */}
- Remove redundant navigation links (sidebar already shows these)
- Update home page to reflect new 5-tab structure
- Simplify section descriptions

--- a/docs/introduction/core-concepts.mdx
+++ b/docs/introduction/core-concepts.mdx
@@ -59,7 +59,7 @@ Kontor uses a novel hybrid model where assets can exist in two states:
 
 This hybrid model gives Kontor unique interoperability—assets are first-class Bitcoin citizens while also supporting rich programmable logic. You don't have to choose between Bitcoin-native tooling and smart contract functionality.
 
-<!-- TODO: Add detailed hybrid UTXO mechanics when implementation documentation is ready -->
+{/* TODO: Add detailed hybrid UTXO mechanics when implementation documentation is ready */}
 
 Kontor's hybrid model enables single-confirmation atomic swaps between BTC, KOR, and assets from other Bitcoin metaprotocols (Ordinals, Runes, Counterparty). Users can chain a BTC-to-KOR swap directly with a contract call in a single Bitcoin transaction, making interaction seamless.
 
@@ -71,7 +71,7 @@ Kontor's hybrid model enables single-confirmation atomic swaps between BTC, KOR,
 
 This atomic composability is what makes Kontor genuinely Bitcoin-native—any Bitcoin user can interact with Kontor applications immediately using standard Bitcoin addresses and wallets.
 
-<!-- TODO: Add detailed atomic swap mechanics explanation when SDK is finalized -->
+{/* TODO: Add detailed atomic swap mechanics explanation when SDK is finalized */}
 
 ---
 
