--- a/docs/introduction/home.mdx
+++ b/docs/introduction/home.mdx
@@ -7,29 +7,31 @@ mode: wide
   Kontor is a next-generation Bitcoin metaprotocol that brings programmable assets and scalable file storage directly to the Bitcoin blockchain. Build rich smart contracts and store data perpetually—all secured by Bitcoin's hashpower, with no validators, bridges, sequencers or sidechains.
 </div>
 
-## Kontor Protocol
+Kontor extends Bitcoin's functionality by building directly on top of it. Each Kontor transaction is a Bitcoin transaction, fully secured by Bitcoin's hashpower. Every state transition is deterministic and verifiable by anyone running an indexer. We're bringing new functionality to Bitcoin without trying to turn it into something it isn't—no separate chains, no alternative consensus, no trust assumptions beyond Bitcoin itself.
 
-Kontor extends Bitcoin's functionality by building directly on top of it. Each Kontor transaction is a Bitcoin transaction, fully secured by Bitcoin's hashpower, with all logic executed on-chain. We're bringing new functionality to Bitcoin without trying to turn it into something it isn't.
+## Smart Contracts with Sigil
 
-[Learn about Kontor →](/docs/introduction/what-is-kontor)
-
-## Sigil Smart Contracts  
-
-Write, deploy and run rich smart contract applications directly on the Bitcoin blockchain. The Sigil framework uses the WebAssembly Component Model to make writing contracts easier than ever before, with strong type safety, rich types, native cross-contract calls and best-in-class developer ergonomics. Writing contracts with Sigil feels just like writing normal software.
+Write, deploy and run rich smart contract applications directly on the Bitcoin blockchain. The Sigil framework uses the WebAssembly Component Model to make writing contracts easier than ever before, with strong type safety, native cross-contract calls and best-in-class developer ergonomics.
 
 [Start building with Sigil →](/docs/sigil/introduction)
 
 ## Perpetual File Storage
 
-A "pay-once, store-forever" model for file storage secured by Bitcoin's hashpower, offering the highest levels of data persistence without bloating the underlying blockchain. For developers who want an alternative to embedding file data directly in transactions, Kontor offers a novel solution that truly complements Bitcoin's built-in functionality and scales to meet user demand.
+Pay once, store forever. Kontor's storage protocol provides scalable, permanent file storage where the data lives off-chain but the storage *system* itself is entirely on-chain. Files from kilobytes to gigabytes with logarithmic cost scaling and Byzantine fault-tolerant availability guarantees.
 
 [Learn about storage →](/docs/storage/introduction)
 
 ## Economic Model
 
-The Kontor economic model was designed from first principles to support data storage and smart contract execution. Keeping BTC as its primary unit of account, Kontor smart contract execution burns KOR, which Bitcoin users can purchase trustlessly in single-confirmation atomic swaps. KOR emissions incentivize perpetual data storage and scale dynamically to keep inflation within bounds.
+The Kontor economic model was designed from first principles to support data storage and smart contract execution. BTC remains the unit of account while KOR meters execution and incentivizes storage through perpetual emissions. Dynamic mechanisms ensure network health and long-term sustainability.
 
 [Explore the economics →](/docs/economics/introduction)
+
+## Resources
+
+Access technical specifications, comprehensive FAQs, and developer resources.
+
+[View all resources →](/docs/resources/faq)
 
 ---
 
