Fix test API to match canonical example-contracts/
Critical fixes based on actual code in example-contracts/:
- Change #[runtime(contracts_dir = "...")] -> #[testlib::test]
- Change interface path to "contract/wit" (relative to test/)
- Update test directory structure (test/src/lib.rs not test/tests/)
- Remove shared-account-dynamic (doesn't exist in example-contracts/)
- Add #[cfg(test)] mod tests wrapper
- Update regtest mode syntax: #[testlib::test(mode = "regtest")]

All test examples now match actual working code in example-contracts/.

--- a/docs/sigil/examples/index.mdx
+++ b/docs/sigil/examples/index.mdx
@@ -10,10 +10,9 @@ This section covers the example contracts in `example-contracts/`. Each is a sel
 1. **hello-world** → Minimal contract structure, basic functions
 2. **token** → Map-based ledger, Integer type, error handling
 3. **shared-account** → Nested Maps, authorization patterns
-4. **shared-account-dynamic** → Dynamic contract addresses
-5. **proxy** → Fallback function, delegation patterns
-6. **pool** → DeFi math, liquidity pools
-7. **amm** → Multi-pool AMM, production patterns
+4. **proxy** → Fallback function, delegation patterns
+5. **pool** → DeFi math, liquidity pools
+6. **amm** → Multi-pool AMM, production patterns
 
 {/* Note: arith and fib examples exist in SMART_CONTRACTS_GUIDE but not yet in docs */}
 
@@ -43,15 +42,7 @@ Multi-tenant account management with two-level nested Maps, authorization patter
 
 ---
 
-### shared-account-dynamic (extended)
-
-Extended shared-account with dynamic token contract addresses stored in state, enabling runtime token selection and flexible contract configuration.
-
-[View Example →](/docs/sigil/examples/shared-account-dynamic)
-
----
-
-### proxy (31 lines)
+### proxy
 
 Generic contract delegation using the fallback function, FallContext, and `foreign::call` for dynamic forwarding. Demonstrates proxy/upgrade patterns.
 
